--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ jobs:
     name: k6 counter extension run
     runs-on: ubuntu-latest
     container: docker://golang:1.17-alpine
+    env:
+          SLACK_TOKEN : ${{ secrets.SLACK_TOKEN }}
 
     steps:
       - name: Checkout
